--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,13 @@
         android:layout_centerVertical="true"
         android:layout_marginTop="22dp"
         android:text="Share to other apps" />
+
+    <Button
+        android:id="@+id/buttonRecyclerViewDemo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom = "true"
+        android:layout_centerHorizontal = "true"
+        android:layout_marginBottom = "20sp"
+        android:text="Recycler View Demo" />
 </RelativeLayout>
